--- a/clap.html
+++ b/clap.html
@@ -46,10 +46,11 @@ transition: 1s 0ms;
 <li><a href="#" tabindex="1">Nav Text 1</a></li>
 <li><a href="#" tabindex="2">Nav Text 2</a></li>
 <li><a href="#" tabindex="3">Nav Text 3</a></li>
-<li><a href="#" tabindex="4">Nav Text 4</a></li>
+<li><a href="#" tabindex="4">Nav teserract 12</a></li>
 <li><a href="#" tabindex="5">Nav Text 5</a></li>
 </ul>
 </div>
+What's all this tehn?
 </body>
 </html>
 
